--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -1,7 +1,12 @@
 <div *ngIf="isLoading && !isLoadingError" class="centered-spinner"><md-spinner></md-spinner></div>
-<h3>{{(story | async)?.headline}}</h3>
-<!-- Dirty little hack with *ngIf, because markdown module does not understand observables -->
-<markdown *ngIf="!isLoading && !isLoadingError">{{(story | async)?.text}}</markdown>
+<div *ngIf="!isLoading && !isLoadingError">
+  <h3>{{(story | async)?.headline}}</h3>
+  <!--
+    Really dirty hack, because angular2 does not support raw output in pipes (markdown)
+    http://stackoverflow.com/questions/35999185/angular2-pipes-output-raw-html
+  -->
+  <p [innerHtml]="(story | async )?.text | markdown"></p>
+</div>
 
 <md-card>
    <md-card-subtitle>Subtitle first</md-card-subtitle>
