--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,5 @@
 <div *ngIf="isLoading && !isLoadingError" class="centered-spinner"><md-spinner></md-spinner></div>
 <div *ngIf="!isLoading && !isLoadingError">
-  <h3>{{(story | async)?.headline}}</h3>
-  <!--
-    Really dirty hack, because angular2 does not support raw output in pipes (markdown)
-    http://stackoverflow.com/questions/35999185/angular2-pipes-output-raw-html
-  -->
-  <p [innerHtml]="(story | async )?.text | markdown"></p>
+  <sb-outlet [model]="components"></sb-outlet>
 </div>
 
