--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -1,16 +1,4 @@
 <div *ngIf="isLoading && !isLoadingError" class="centered-spinner"><md-spinner></md-spinner></div>
 <div *ngIf="!isLoading && !isLoadingError">
-  <h3>{{(story | async)?.headline}}</h3>
-  <!--
-    Really dirty hack, because angular2 does not support raw output in pipes (markdown)
-    http://stackoverflow.com/questions/35999185/angular2-pipes-output-raw-html
-  -->
-  <p [innerHtml]="(story | async )?.text | markdown"></p>
+  <sb-outlet [model]="components"></sb-outlet>
 </div>
-
-<md-card *ngFor="let item of news | async">
-   <md-card-title>{{item.content.model.headline}}</md-card-title>
-   <md-card-content>
-        <p [innerHtml]="item.content.model.text | markdown"></p>
-   </md-card-content>
-</md-card>
