--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,20 @@
-<md-sidenav-layout [class.m2app-dark]="isDarkTheme">
-  <md-sidenav #sidenav mode="side" class="app-sidenav">
-    <md-nav-list>
-      <a md-list-item routerLink="/" routerLinkActive="active">Home</a>
-      <a md-list-item routerLink="/news" routerLinkActive="active">News</a>
-    </md-nav-list>
-  </md-sidenav>
-  <md-toolbar color="primary">
+<mat-sidenav-container [class.m2app-dark]="isDarkTheme">
+  <mat-sidenav #sidenav mode="side" class="app-sidenav">
+    <mat-nav-list>
+      <a mat-list-item routerLink="/" routerLinkActive="active">Home</a>
+      <a mat-list-item routerLink="/news" routerLinkActive="active">News</a>
+    </mat-nav-list>
+  </mat-sidenav>
+  <mat-toolbar color="primary">
     <button class="app-icon-button" (click)="sidenav.toggle()">
       <i class="material-icons app-toolbar-menu">menu</i>
     </button>
     <span>
-    <md-icon class="icon-20">explore</md-icon>
-    Angular 2 Storyblok Demo
+    <mat-icon class="icon-20">explore</mat-icon>
+    Angular Storyblok Demo
   </span>
-  </md-toolbar>
+  </mat-toolbar>
   <div class="app-content">
     <router-outlet></router-outlet>
   </div>
-</md-sidenav-layout>
+</mat-sidenav-container>
